[registry-oracle] add swagger api docs, log debug info, GET Audit
